		   CHANGES IN formatR VERSION 1.9

NEW FEATURES

  o Lines will be wrapped after operators `%>%`, `%T%`, `%$%`, and `%<>%` now
  (thanks, @g4challenge #54, @jzelner #62, @edlee123 #68).

BUG FIXES

  o When the text in the clipboard on macOS does not have a final EOL,
  `tidy_source()` fails to read the last line (thanks, @edlee123, #54).

		   CHANGES IN formatR VERSION 1.8

MAJOR CHANGES

  o White spaces on blank lines are removed now (thanks, @nylander, #88).

  o This package requires R >= 3.2.3 now.

		   CHANGES IN formatR VERSION 1.7

MAJOR CHANGES

  o `tidy_source()` will try to preserve the character encoding of the `text`
  argument in the output.

		   CHANGES IN formatR VERSION 1.6

NEW FEATURES

  o Added a new argument `wrap` to `tidy_source()` so that users can choose not
  to wrap comments via `tidy_source(..., wrap = FALSE)`, or set the global
  option `options(formatR.wrap = FALSE)` (thanks, @YongLiedu, #73).

		   CHANGES IN formatR VERSION 1.5

NEW FEATURES

  o added a new function `tidy_file()` to format specified R scripts (thanks,
  @edlee123, #61)

  o usage() was re-implemented by @egnha in #66; the major difference with the
  previous version is that `width` means the maximum width (if possible) instead
  of the minimum; it also gained two new arguments, `indent.by.FUN` and `fail`;
  see ?formatR::usage for details

		   CHANGES IN formatR VERSION 1.4

NEW FEATURES

  o `tidy_source()` can preserve line breaks in character strings in source code

MAJOR CHANGES

  o the deprecated functions tidy.source(), tidy.dir(), and tidy.eval() have
  been removed; use tidy_source(), tidy_dir() and tidy_eval() instead

  o comments that begin with `#+` or `#-` are no longer wrapped; such comments
  are treated as knitr chunk options in `knitr::spin()` (#52)

BUG FIXES

  o `tidy_source()` should not write an extra space to the last line of code
  (thanks, @mr-karan, #49)

  o long strings (> 1000 characters) in source code can be preserved now