@@ -273,10 +273,10 @@ will become
 Inline comments are first disguised as a weird operation with its preceding R code, which is essentially meaningless but syntactically correct!  For example,
 
 ```r
-1+1 %𝅦% "#  comments"
+1+1 %\b% "#  comments"
 ```
 
-then `base::parse()` will deal with this expression; again, the disguised comments will not be removed. In the end, inline comments will be freed as well (remove the operator `%𝅦%` and surrounding double quotes).
+then `base::parse()` will deal with this expression; again, the disguised comments will not be removed. In the end, inline comments will be freed as well (remove the operator `%\b%` and surrounding double quotes).
 
 All these special treatments to comments are due to the fact that `base::parse()` and `base::deparse()` can tidy the R code at the price of dropping all the comments.
 
